tests/suites/scctests/cc/error/0034-eof.c
/*
PATTERN:
0034-eof.c:10: error: unexpected '<EOF>'
.
*/
int
main()
{
	int *p;
	p = 0;
